tests/fixtures/functional_patterns/negative/n25_basic_arithmetic.rs
fn calculate(a: i32, b: i32) -> i32 {
    a * 2 + b / 3
}
